[project]
name = "clinical-trials-agent"
version = "1.0.0"
description = "AI-powered backend that converts clinical-trial questions into structured visualization specs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "google-genai>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the real ClinicalTrials.gov API (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
